testing prevention of h1 text wrapping

--- a/project/styles/pokemon-type-matchup-tool.css
+++ b/project/styles/pokemon-type-matchup-tool.css
@@ -35,6 +35,7 @@ h1 {
     max-width: 100%;
     background-color: var(--tog-blue);
     padding: 1.5rem;
+    white-space: nowrap;
 }
 
 nav {
